<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.view.MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_marginTop="5dp"
            android:id="@+id/movie_poster"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:riv_corner_radius_top_right="10dp"
            app:riv_corner_radius_top_left="10dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="@id/movie_poster"/>
        <View
            android:id="@+id/back_button"
            android:layout_margin="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="@id/movie_poster"/>


        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/over_view_header"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="@string/over_view"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/title_textview"
            android:layout_width="200dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:layout_margin="20dp"
            android:padding="5dp"
            android:id="@+id/overview_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:gravity="center"
            app:trimMode="trimModeLength"
            android:textColor="@color/black"
            app:trimLength="100"
            app:colorClickableText="#039BE5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/over_view_header"
            />

        <TextView
            android:textStyle="bold"
            android:id="@+id/director_header"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/director"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_text_view"/>

        <TextView
            android:id="@+id/director_text_view"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/director_header"/>


        <TextView
            android:textStyle="bold"
            android:id="@+id/duration_header"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/duration"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_text_view"/>

        <TextView
            android:id="@+id/duration_text_view"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/director_header"/>

        <TextView
            android:textStyle="bold"
            android:id="@+id/release_date_header"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/release_date"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_text_view"/>

        <TextView
            android:id="@+id/release_date_text_view"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/director_header"/>

        <TextView
            android:layout_marginEnd="20dp"
            tools:text="9.8"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/rate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rate_icon"
            app:layout_constraintBottom_toBottomOf="@id/rate_icon"
            android:textColor="@color/black"/>

        <ImageView
            android:src="@drawable/baseline_star_24"
            android:layout_marginEnd="10dp"
            android:id="@+id/rate_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/over_view_header"
            app:layout_constraintBottom_toBottomOf="@id/over_view_header"
            app:layout_constraintEnd_toStartOf="@id/rate_text_view"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>